[tool.poetry]
name = "http-load-tester"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.37.0"
websockets = "^12.0"
matplotlib = "^3.9.1"
asyncio = "^3.4.3"
plotly = "^5.23.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
httpx = "^0.27.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
